--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <h1 class="title">Angular Router</h1>
+
+<nav>
+  <a routerLink="/crisis-center" routerLinkActive="active">Crisis Center</a>
+  <a routerLink="/superheroes" routerLinkActive="active">Heroes</a>
+  <a>Admin</a>
+  <a>Login</a>
+</nav>
+<router-outlet></router-outlet>
