--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   <a routerLink="/superheroes" routerLinkActive="active">Heroes</a>
   <a>Admin</a>
   <a>Login</a>
+  <a routerLink="/contact" routerLinkActive="active">Contact</a>
 </nav>
 <router-outlet></router-outlet>
