--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,15 @@
 <h2>Welcome</h2>
+
+<form *ngIf="contacts" (ngSubmit)="onSubmit()" #contactForm="ngForm">
+  <h3>{{contact.name}}</h3>
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" required [(ngModel)]="contact.name"
+           name="name" #name="ngModel">
+    <div [hidden]="name.valid" class="alert alert-danger">
+      Name is required
+    </div>
+  </div>
+  <br>
+  <button type="submit" class="btn btn-default" [disabled]="!contactForm.form.valid">Save</button>
+</form>
