--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
 <h2>Welcome</h2>
+<div *ngIf="msg" class="msg">{{msg}}</div>
 
 <form *ngIf="contacts" (ngSubmit)="onSubmit()" #contactForm="ngForm">
   <h3 highlight>{{contact.name | awesome}}</h3>
@@ -12,4 +13,6 @@
   </div>
   <br>
   <button type="submit" class="btn btn-default" [disabled]="!contactForm.form.valid">Save</button>
+  <button type="button" class="btn" (click)="nextContact()" [disabled]="!contactForm.form.valid">Next Contact</button>
+  <button type="button" class="btn" (click)="newContact()">New Contact</button>
 </form>
