--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Angular Router</h1>
+<app-title [subtitle]="'(Final)'"></app-title>
 
 <nav>
   <a routerLink="/crisis-center" routerLinkActive="active">Crisis Center</a>
