--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-title [subtitle]="'(Final)'"></app-title>
 
 <nav>
-  <a routerLink="/crisis-center" routerLinkActive="active">Crisis Center</a>
+  <a routerLink="/crisis" routerLinkActive="active">Crisis Center</a>
   <a routerLink="/superheroes" routerLinkActive="active">Heroes</a>
   <a>Admin</a>
   <a>Login</a>
