--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav>
   <a routerLink="/crisis" routerLinkActive="active">Crisis Center</a>
   <a routerLink="/superheroes" routerLinkActive="active">Heroes</a>
-  <a>Admin</a>
+  <a routerLink="/example" routerLinkActive="active">Example</a>
   <a>Login</a>
   <a routerLink="/contact" routerLinkActive="active">Contact</a>
 </nav>
