--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -11,3 +11,10 @@
 <p [appHighlight]="color">Highlight me!</p>
 <p [appHighlight]="color" [defaultColor]="'violet'">Highlight me too!</p>
 <p appHighlight defaultColor="orange">Highlight me in orange.</p>
+
+<h1>Structural Directives</h1>
+<app-happy-hero [hero]="hero"></app-happy-hero>
+
+<h2></h2>
+<h4>NgSwitch</h4>
+<div ></div>
