--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="msg" class="msg">{{msg}}</div>
 
 <form *ngIf="contacts" (ngSubmit)="onSubmit()" #contactForm="ngForm">
-  <h3 highlight>{{contact.name | awesome}}</h3>
+  <h3 appHighlight>{{contact.name | awesome}}</h3>
   <div class="form-group">
     <label>Name</label>
     <input type="text" class="form-control" required [(ngModel)]="contact.name"
