增加ng-container & 增加AdModule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <a routerLink="/example" routerLinkActive="active">Example</a>
   <a>Login</a>
   <a routerLink="/contact" routerLinkActive="active">Contact</a>
+  <a routerLink="/ad" routerLinkActive="active">AD</a>
 </nav>
 <router-outlet></router-outlet>
