--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -43,3 +43,22 @@
     </ng-container>
   </ng-container>
 </select>
+
+<hr>
+
+<h2>UnlessDirective</h2>
+<p>
+  The condition is currently
+  <span [ngClass]="{'a': !condition, 'b': condition, 'unless': true}">{{condition}}</span>
+  <button (click)="condition = !condition"
+          [ngClass]="{'a': condition, 'b': !condition}">
+    Toggle condition to {{condition ? 'false' : 'true'}}
+  </button>
+</p>
+<p *appUnless="condition" class="unless a">
+  (A) This paragraph is displayed because the condition is false.
+</p>
+<p *appUnless="!condition" class="unless b">
+  (B) Although the condition is true,
+  this paragraph is displayed because myUnless is set to false.
+</p>
