--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -5,8 +5,8 @@
 <h4>Pick a highlight color</h4>
 <div>
   <input type="radio" name="colors" (click)="color='lightgreen'">Green
-  <input type="radio" name="colors" (click)="color='yellow'">Yellow
-  <input type="radio" name="colors" (click)="color='cyan'">Cyan
+  <input type="radio" name="colors" [(ngModel)]="color" [value]="'yellow'">Yellow
+  <input type="radio" name="colors" [(ngModel)]="color" value="cyan">Cyan
 </div>
 <p [appHighlight]="color">Highlight me!</p>
 <p [appHighlight]="color" [defaultColor]="'violet'">Highlight me too!</p>
