--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -80,3 +80,8 @@
 <button (click)="timer.stop()">Stop</button>
 <div class="seconds">{{timer.seconds}}</div>
 <app-countdown-timer #timer></app-countdown-timer>
+
+<h2>Source code version</h2>
+<button (click)="newMinor()">New minor version</button>
+<button (click)="newMajor()">New major version</button>
+<app-version-child [major]="major" [minor]="minor"></app-version-child>
