--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -97,3 +97,5 @@
 
 <h2>Master controls {{names.length}} names</h2>
 <app-name-child *ngFor="let n of names" [name]="n"></app-name-child>
+
+<app-async-message></app-async-message>
