--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -99,3 +99,5 @@
 <app-name-child *ngFor="let n of names" [name]="n"></app-name-child>
 
 <app-async-message></app-async-message>
+
+<app-keyup></app-keyup>
