--- a/src/app/myform/hero-form.component.html
+++ b/src/app/myform/hero-form.component.html
@@ -1,19 +1,24 @@
 <div class="container">
   <h1>Hero Form</h1>
-  <form (ngSubmit)="onSubmit()">
+  <form #heroForm="ngForm" (ngSubmit)="onSubmit()">
+    {{diagnostic}}<br>
+    {{model | json}}
     <div class="form-group">
       <label for="name">Name</label>
-      <input class="form-control" id="name" required>
+      <input class="form-control" id="name" required
+             [(ngModel)]="model.name" name="name" #spy>
     </div>
 
     <div class="form-group">
       <label for="alterEgo">Alter Ego</label>
-      <input class="form-control" id="alterEgo">
+      <input class="form-control" id="alterEgo"
+             [(ngModel)]="model.alterEgo" name="alterEgo">
     </div>
 
     <div class="form-group">
       <label for="power">Hero Power</label>
-      <select class="form-control" id="power" required>
+      <select class="form-control" id="power" required
+              [(ngModel)]="model.power" name="power">
         <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
       </select>
     </div>
@@ -21,3 +26,5 @@
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
+
+<br>TODO: remove this: {{spy.className}}
