--- a/src/app/myform/hero-form.component.html
+++ b/src/app/myform/hero-form.component.html
@@ -56,3 +56,5 @@
     <button class="btn btn-primary" (click)="submitted=false">Edit</button>
   </div>
 </div>
+
+<app-form-template></app-form-template>
