--- a/src/app/myform/hero-form.component.html
+++ b/src/app/myform/hero-form.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <app-keyup></app-keyup>
+
   <div [hidden]="submitted">
     <h1>Hero Form</h1>
     <form #heroForm="ngForm" (ngSubmit)="onSubmit()">
