--- a/src/app/myform/form-template.component.html
+++ b/src/app/myform/form-template.component.html
@@ -6,8 +6,8 @@
 
       <div class="form-group">
         <label for="name">Name</label>
-        <input id="name" name="name" #name="ngModel" required class="form-control"
-               minlength="4" [(ngModel)]="hero.name">
+        <input id="name" #name="ngModel" required class="form-control"
+               [(ngModel)]="hero.name" name="name" minlength="4">
         <div *ngIf="name.invalid && (name.dirty || name.touched)"
              class="alert alert-danger">
           <div *ngIf="name.errors.required">
@@ -21,14 +21,14 @@
 
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
-        <input id="alterEgo" name="alterEgo" class="form-control"
-               [(ngModel)]="hero.alterEgo">
+        <input id="alterEgo" class="form-control"
+               [(ngModel)]="hero.alterEgo" name="alterEgo">
       </div>
 
       <div class="form-group">
         <label for="power">Hero Power</label>
-        <select id="power" name="power" #power="ngModel" class="form-control"
-                required [(ngModel)]="hero.power">
+        <select id="power" #power="ngModel" class="form-control"
+                [(ngModel)]="hero.power" name="power" required>
           <option *ngFor="let p of powers" [value]="p">{{p}}</option>
         </select>
         <div *ngIf="power.errors && power.touched" class="alert alert-danger">
@@ -47,7 +47,9 @@
 
     <div class="submitted-message" *ngIf="heroForm.submitted">
       <p>You've submitted your hero, {{heroForm.value.name}}!</p>
-      <button (click)="heroForm.resetForm({})">Add new hero</button>
+      <button class="btn btn-default" (click)="heroForm.resetForm({})">
+        Add new hero
+      </button>
     </div>
   </form>
 </div>
