--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 h2, h3 {
-  color: #555;
+  color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
@@ -26,6 +26,27 @@ a {
   cursor: hand;
 }
 
+button {
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+
+/* Navigation link styles */
 nav a {
   padding: 5px 10px;
   text-decoration: none;
@@ -49,6 +70,7 @@ nav a.active {
   color: #039be5;
 }
 
+/* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
