--- a/src/app/crisis/crisis-list/crisis-list.component.html
+++ b/src/app/crisis/crisis-list/crisis-list.component.html
@@ -1,3 +1,7 @@
+<alert type="primary">
+  <strong>Well done!</strong> You successfully read this important alert message.
+</alert>
+
 <ul class="crises">
   <li *ngFor="let crisis of crises$ | async"
       [class.selected]="crisis.id === selectedId">
