--- a/src/app/crisis/crisis-list/crisis-list.component.html
+++ b/src/app/crisis/crisis-list/crisis-list.component.html
@@ -2,6 +2,13 @@
   <strong>Well done!</strong> You successfully read this important alert message.
 </alert>
 
+<button type="button" class="btn btn-primary"
+        popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        placement="right"
+        popoverTitle="Right, you got it!"
+        [outsideClick]="true">Live demo
+</button>
+
 <ul class="crises">
   <li *ngFor="let crisis of crises$ | async"
       [class.selected]="crisis.id === selectedId">
