--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,8 +4,8 @@
 <form *ngIf="contacts" (ngSubmit)="onSubmit()" #contactForm="ngForm">
   <h3 appHighlight>{{contact.name | awesome}}</h3>
   <div class="form-group">
-    <label>Name</label>
-    <input type="text" class="form-control" required [(ngModel)]="contact.name"
+    <label for="contactName">Name</label>
+    <input id="contactName" type="text" class="form-control" required [(ngModel)]="contact.name"
            name="name" #name="ngModel">
     <div [hidden]="name.valid" class="alert alert-danger">
       Name is required
@@ -16,3 +16,5 @@
   <button type="button" class="btn" (click)="nextContact()" [disabled]="!contactForm.form.valid">Next Contact</button>
   <button type="button" class="btn" (click)="newContact()">New Contact</button>
 </form>
+
+<app-zippy (open)="onOpen($event)" (close)="onClose($event)"></app-zippy>
