--- a/src/app/crisis/crisis-list/crisis-list.component.html
+++ b/src/app/crisis/crisis-list/crisis-list.component.html
@@ -1,3 +1,22 @@
+<div class="checkbox">
+  <label>
+    <input type="checkbox" [(ngModel)]="oneAtATime">
+    open only one at time
+  </label>
+</div>
+
+<accordion [closeOthers]="oneAtATime">
+  <accordion-group heading="Header">
+    This content is straight in the template.
+  </accordion-group>
+  <accordion-group heading="Content 1">
+    <p>Content 1</p>
+  </accordion-group>
+  <accordion-group heading="Content 2">
+    <p>Content 2</p>
+  </accordion-group>
+</accordion>
+
 <alert type="primary">
   <strong>Well done!</strong> You successfully read this important alert message.
 </alert>
@@ -12,7 +31,7 @@
 <ul class="crises">
   <li *ngFor="let crisis of crises$ | async"
       [class.selected]="crisis.id === selectedId">
-    <a [routerLink]="[crisis.id]">
+    <a [routerLink]="crisis.id">
       <span class="badge">{{crisis.id}}</span>{{crisis.name}}
     </a>
   </li>
