--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
   <a>Login</a>
   <a routerLink="/contact" routerLinkActive="active">Contact</a>
   <a routerLink="/ad" routerLinkActive="active">AD</a>
+  <a routerLink="/http/config" routerLinkActive="active">HTTP</a>
 </nav>
 <router-outlet></router-outlet>
