--- a/src/app/example/example.component.css
+++ b/src/app/example/example.component.css
@@ -30,3 +30,8 @@ button.b, span.b, .unless.b {
   background-color: lightgreen;
   font-size: 100%;
 }
+
+.special {
+  font-weight: bold;
+  font-size: x-large
+}
