--- a/src/app/http/config/config.component.html
+++ b/src/app/http/config/config.component.html
@@ -1,9 +1,16 @@
 <h3>Get configuration from JSON file</h3>
 <div>
   <button (click)="clear(); showConfig_v2()">Get</button>
+  <button (click)="clear(); showConfigResponse()">GetResponse</button>
   <button (click)="clear()">Clear</button>
 </div>
 <span *ngIf="config">
   <p>Heroes API URL is "{{config.heroesUrl}}"</p>
   <p>Textfile URL is "{{config.textfile}}</p>
+  <div *ngIf="headers">
+    Response headers:
+    <ul>
+      <li *ngFor="let header of headers">{{header}}</li>
+    </ul>
+  </div>
 </span>
