--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -126,3 +126,10 @@
      [style.background-color]="!isSpecial ? 'cyan' : 'gray'">
   This one is not so special
 </div>
+
+<p>currentClasses is {{currentClasses | json}}</p>
+<div [ngClass]="currentClasses">This div is initially saveable, unchanged, and special</div>
+
+<div [ngStyle]="currentStyles">
+  This div is initially italic, normal weight, and extra large (24px).
+</div>
