--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+*, ::after, ::before {
+  box-sizing: unset;
+}
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
