--- a/src/app/crisis/crisis-list/crisis-list.component.html
+++ b/src/app/crisis/crisis-list/crisis-list.component.html
@@ -1,7 +1,7 @@
 <ul class="crises">
   <li *ngFor="let crisis of crises$ | async"
       [class.selected]="crisis.id === selectedId">
-    <a [routerLink]="crisis.id">
+    <a [routerLink]="['/crisis',crisis.id]">
       <span class="badge">{{crisis.id}}</span>{{crisis.name}}
     </a>
   </li>
